added responsive design to all pages

--- a/creative_services/brandstrategy.html
+++ b/creative_services/brandstrategy.html
@@ -114,26 +114,26 @@
   </div>
   <div class="container" > 
     <div class="row"> 
-      <div class="col">
+      <div class="col mb-3 align-self-center ">
 <img src="./../images/brand strategy.jpg" alt="people brainstorming in front of whiteboard" class="service-image">
       </div>
       <div class="col">
-    <p class=" mb-1">Are you starting up a new business? Or are you thinking about refreshing the look of your current business? We can help
+    <p class=" mb-1 bio">Are you starting up a new business? Or are you thinking about refreshing the look of your current business? We can help
   you create a brand that represents you and communicates for you by creating the suite of brand marketing collateral that
   you need for promoting your business.</br>
   We can help you create the following elements:
   </p>
     <p class=" mb-1">
     <ul> 
-  <li>◼ Logo creation</li>
-  <li>◼ Brand guidelines</li>
-  <li>◼ Business Cards</li>
-  <li>◼ Letterheads</li>
-  <li>◼ Signage</li>
-  <li>◼ Advertisement design</li>
-  <li>◼ Graphic design</li>
-  <li>◼ Web design</li>
-  <li>◼ Presentation decks and proposal design</li>
+  <li class="bio-list">◼ Logo creation</li>
+  <li class="bio-list">◼ Brand guidelines</li>
+  <li class="bio-list">◼ Business Cards</li>
+  <li class="bio-list">◼ Letterheads</li>
+  <li class="bio-list">◼ Signage</li>
+  <li class="bio-list">◼ Advertisement design</li>
+  <li class="bio-list">◼ Graphic design</li>
+  <li class="bio-list">◼ Web design</li>
+  <li class="bio-list">◼ Presentation decks and proposal design</li>
 </ul>
 </p>
 </div>
@@ -142,15 +142,16 @@
   
     <div class="container creative-services">
       <div class="row">
-        <div class="col"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon"
+        <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon"
             class="service-icon" /></a></div>
-        <div class="col"><a href="/creative_services/logodesign.html">Logo creation</a></div>
-        <div class="col"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-        <div class="col"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
-        <div class="col"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-        <div class="col"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
-        <div class="col"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-        <div class="col"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
+        <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/logodesign.html">Logo creation</a></div>
+        <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+        <div class="col-lg-2 col-md-2 col-4"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
+        <div class="w-100 d-md-none"></div>
+        <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+        <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
+        <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+        <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
       </div>
       </div>
 
@@ -159,11 +160,12 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -172,8 +174,7 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
