--- a/creative_services/logodesign.html
+++ b/creative_services/logodesign.html
@@ -113,12 +113,12 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col mb-3  align-self-center">
         <img src="./../images/Colour selection.jpg" alt="sample colour palettes for selection"
           class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Your logo is a key part of your brand identity and is often the first thing your customers will see and remember. I can
+        <p class=" mb-1 bio">Your logo is a key part of your brand identity and is often the first thing your customers will see and remember. I can
         help you design a memorable logo that does the talking for you to make you stand out from the pack. The logo design is
         usually accompanied by a selection of brand assets that can be used alongside your logo depending on the context.
        </br>
@@ -126,14 +126,14 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li>◼ Logo creation</li>
-          <li>◼ Icon design</li>
-          <li>◼ Branding creation</li>
-          <li>◼ Rebranding</li>
-          <li>◼ Brand style guides</li>
-          <li>◼ Brand and logo assets</li>
-          <li>◼ Templates</li>
-          <li>◼ Marketing collateral</li>
+          <li class="bio-list">◼ Logo creation</li>
+          <li class="bio-list" >◼ Icon design</li>
+          <li class="bio-list">◼ Branding creation</li>
+          <li class="bio-list">◼ Rebranding</li>
+          <li class="bio-list">◼ Brand style guides</li>
+          <li class="bio-list">◼ Brand and logo assets</li>
+          <li class="bio-list">◼ Templates</li>
+          <li class="bio-list">◼ Marketing collateral</li>
         </ul>
 
         </p>
@@ -143,18 +143,20 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/creative_services/logodesign.html">Logo creation</a></div>
-      <div class="col"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
-      <div class="col"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
-      <div class="col"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/logodesign.html"><img
+            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/logodesign.html">Logo creation</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/marketingcollateral.html"><img
+            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a>
+      </div>
+      <div class="w-100 d-md-none"></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/brandstrategy.html"><img
+            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/templates.html"><img
+            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
     </div>
   </div>
 
@@ -163,11 +165,12 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -176,8 +179,7 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
