--- a/creative_services/marketingcollateral.html
+++ b/creative_services/marketingcollateral.html
@@ -114,11 +114,11 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col mb-3 align-self-center">
         <img src="./../images/mockup.png" alt="sample colour palettes for selection" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Well-crafted marketing material can help you catch the attention of your potential customers. It is really important to
+        <p class=" mb-1 bio">Well-crafted marketing material can help you catch the attention of your potential customers. It is really important to
         know who your audience is before creating advertising material. We can help with this and make sure that each piece is
         targeting the right customers.
         To help convince your customers to buy your product, we can help you build trust by creating with you the marketing
@@ -128,22 +128,22 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li>◼ Brochure design</li>
-          <li>◼ Product catalogue design</li>
-          <li>◼ Postcards and thank you cards</li>
-          <li>◼ Flyer design</li>
-          <li>◼ Poster design</li>
-          <li>◼ Infographic design</li>
-          <li>◼ Print and digital advertisement</li>
-          <li>◼ Social media advertisement</li>
-          <li>◼ Banner design</li>
-          <li>◼ Expo booth design</li>
-          <li>◼ Sign and flag design</li>
-          <li>◼ Apparel and uniform branding</li>
-          <li>◼ Newsletter and blog posts template</li>
-          <li>◼ Case studies template</li>
-          <li>◼ Testimonial and video explainer script and design</li>
-          <li>◼ Landing page design</li>
+          <li class="bio-list">◼ Brochure design</li>
+          <li class="bio-list">◼ Product catalogue design</li>
+          <li class="bio-list">◼ Postcards and thank you cards</li>
+          <li class="bio-list">◼ Flyer design</li>
+          <li class="bio-list">◼ Poster design</li>
+          <li class="bio-list">◼ Infographic design</li>
+          <li class="bio-list">◼ Print and digital advertisement</li>
+          <li class="bio-list">◼ Social media advertisement</li>
+          <li class="bio-list">◼ Banner design</li>
+          <li class="bio-list">◼ Expo booth design</li>
+          <li class="bio-list">◼ Sign and flag design</li>
+          <li class="bio-list">◼ Apparel and uniform branding</li>
+          <li class="bio-list">◼ Newsletter and blog posts template</li>
+          <li class="bio-list">◼ Case studies template</li>
+          <li class="bio-list">◼ Testimonial and video explainer script and design</li>
+          <li class="bio-list">◼ Landing page design</li>
         </ul>
 
         </p>
@@ -151,33 +151,36 @@
     </div>
   </div>
 
-  <div class="container creative-services">
-    <div class="row">
-      <div class="col"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/creative_services/logodesign.html">Logo creation</a></div>
-      <div class="col"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
-      <div class="col"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
-      <div class="col"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
+<div class="container creative-services">
+  <div class="row">
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/logodesign.html"><img
+          src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/logodesign.html">Logo creation</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/marketingcollateral.html"><img
+          src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+    <div class="col-lg-2 col-md-2 col-4"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a>
     </div>
+    <div class="w-100 d-md-none"></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/brandstrategy.html"><img
+          src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/templates.html"><img
+          src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
   </div>
+</div>
 
 
 </body>
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -186,8 +189,7 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
