--- a/creative_services/templates.html
+++ b/creative_services/templates.html
@@ -114,11 +114,11 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col mb-3 align-self-center">
         <img src="./../images/presentation.jpg" alt="presentation on laptop screen" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Who doesn't like receiving compliment on their presentation deck? Help your stakeholder focus on the content of your
+        <p class=" mb-1 bio">Who doesn't like receiving compliment on their presentation deck? Help your stakeholder focus on the content of your
         presentation by using a stylish and uncluttered presentation template that will help you engage with your audience and
         communicate effectively.
         We can create a template for you to use as a base for every presentation or help you design your next top notch deck by
@@ -129,10 +129,10 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li>◼ PowerPoint presentation</li>
-          <li>◼ Google Slide presentation</li>
-          <li>◼ Webinar slide deck design</li>
-          <li>◼ Proposal template</li>
+          <li class="bio-list">◼ PowerPoint presentation</li>
+          <li class="bio-list">◼ Google Slide presentation</li>
+          <li class="bio-list">◼ Webinar slide deck design</li>
+          <li class="bio-list">◼ Proposal template</li>
       
         </ul>
         </p>
@@ -142,31 +142,35 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/creative_services/logodesign.html">Logo creation</a></div>
-      <div class="col"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
-      <div class="col"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
-      <div class="col"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/logodesign.html"><img
+            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/logodesign.html">Logo creation</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/marketingcollateral.html"><img
+            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a>
+      </div>
+      <div class="w-100 d-md-none"></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/brandstrategy.html"><img
+            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/templates.html"><img
+            src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
     </div>
   </div>
+
 
 
 </body>
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -175,8 +179,7 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
