--- a/digital_marketing/digitalstrategy.html
+++ b/digital_marketing/digitalstrategy.html
@@ -114,11 +114,11 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col mb-3 align-self-center">
         <img src="./../images/marteking strategy.jpg" alt="Top view of desk with marketing strategy written on piece of paper" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Considering most consumers have now more contacts with brands online via smartphones or computers than ever, it is
+        <p class=" mb-1 bio">Considering most consumers have now more contacts with brands online via smartphones or computers than ever, it is
         increasingly important to put together a digital strategy to interact with your audience effectively and turn them into
         paying customers. A digital marketing strategy focuses on establishing the specific and achievable goals for marketing
         through online channels. With the goals established, various tactics can then be put in place to achieve our marketing
@@ -128,16 +128,16 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li>◼ Digital marketing strategy</li>
-          <li>◼ Digital marketing assessment</li>
-          <li>◼ Buyer persona creation</li>
-          <li>◼ Search Engine Optimisation (SEO)</li>
-          <li>◼ Social Media Marketing (SMM)</li>
-          <li>◼ Digital advertising</li>
-          <li>◼ Content Marketing</li>
-          <li>◼ Website marketing and landing pages</li>
-          <li>◼ Email Marketing</li>
-          <li>◼ Downloadable content</li>
+          <li class="bio-list">◼ Digital marketing strategy</li>
+          <li class="bio-list">◼ Digital marketing assessment</li>
+          <li class="bio-list">◼ Buyer persona creation</li>
+          <li class="bio-list">◼ Search Engine Optimisation (SEO)</li>
+          <li class="bio-list">◼ Social Media Marketing (SMM)</li>
+          <li class="bio-list">◼ Digital advertising</li>
+          <li class="bio-list">◼ Content Marketing</li>
+          <li class="bio-list">◼ Website marketing and landing pages</li>
+          <li class="bio-list">◼ Email Marketing</li>
+          <li class="bio-list">◼ Downloadable content</li>
         </ul>
         </p>
       </div>
@@ -146,18 +146,19 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col"><a href="/digital_marketing/digitalstrategy.html"><img src="./../images/DMicon.png"
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/digitalstrategy.html"><img src="./../images/DMicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
-      <div class="col"><a href="/digital_marketing/smmanagement.html"><img src="./../images/DMicon.png"
+      <div class="col-lg-2 col-md-2 col-4"><a href="/digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/smmanagement.html"><img src="./../images/DMicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"> <a href="/digital_marketing/smmanagement.html">Social Media Management</a></div>
-      <div class="col"><a href="/digital_marketing/emailmarketing.html"><img src="./../images/DMicon.png"
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/digital_marketing/smmanagement.html">Social Media Management</a></div>
+        <div class="w-100 d-md-none"></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/emailmarketing.html"><img src="./../images/DMicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/digital_marketing/emailmarketing.html">Email Marketing</a></div>
-      <div class="col"><a href="/digital_marketing/websitemarketing.html"><img src="./../images/DMicon.png"
+      <div class="col-lg-2 col-md-2 col-4"><a href="/digital_marketing/emailmarketing.html">Email Marketing</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/websitemarketing.html"><img src="./../images/DMicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/digital_marketing/websitemarketing.html">Website Marketing</a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/digital_marketing/websitemarketing.html">Website Marketing</a></div>
     </div>
   </div>
 
@@ -166,11 +167,12 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -179,8 +181,7 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
