--- a/digital_marketing/smmanagement.html
+++ b/digital_marketing/smmanagement.html
@@ -113,12 +113,12 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col mb-3 align-self-center">
         <img src="../images/Audience.png"
           alt="Word audience written on whiteboard" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Wanting to increase traffic to your website or reach more customers? Social Media marketing can be an option for your
+        <p class=" mb-1 bio">Wanting to increase traffic to your website or reach more customers? Social Media marketing can be an option for your
         business. After understanding your marketing objectives, we can help you select the most relevant social media
         platform(s) for your target audience and put a plan in place to make use of your social media potential.
         Not sure if social media is the tool for you? Here is the top 3 benefits:
@@ -131,13 +131,13 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li>◼ Social media strategy</li>
-          <li>◼ Social media platform selection</li>
-          <li>◼ Facebook</li>
-          <li>◼ Instagram</li>
-          <li>◼ LinkedIn</li>
-          <li>◼ Pinterest</li>
-          <li>◼ Monitor social media metrics (reach, engagement, etc.)</li>
+          <li class="bio-list">◼ Social media strategy</li>
+          <li class="bio-list">◼ Social media platform selection</li>
+          <li class="bio-list">◼ Facebook</li>
+          <li class="bio-list">◼ Instagram</li>
+          <li class="bio-list">◼ LinkedIn</li>
+          <li class="bio-list">◼ Pinterest</li>
+          <li class="bio-list">◼ Monitor social media metrics (reach, engagement, etc.)</li>
         </ul>
 
         </p>
@@ -147,18 +147,21 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col"><a href="/digital_marketing/digitalstrategy.html"><img src="../images/DMicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
-      <div class="col"><a href="/digital_marketing/smmanagement.html"><img src="../images/DMicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"> <a href="/digital_marketing/smmanagement.html">Social Media Management</a></div>
-      <div class="col"><a href="/digital_marketing/emailmarketing.html"><img src="../images/DMicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/digital_marketing/emailmarketing.html">Email Marketing</a></div>
-      <div class="col"><a href="/digital_marketing/websitemarketing.html"><img src="../images/DMicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/digital_marketing/websitemarketing.html">Website Marketing</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/digitalstrategy.html"><img
+            src="./../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/digital_marketing/digitalstrategy.html">Digital Marketing
+          Strategy</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/smmanagement.html"><img
+            src="./../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/digital_marketing/smmanagement.html">Social Media Management</a>
+      </div>
+      <div class="w-100 d-md-none"></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/emailmarketing.html"><img
+            src="./../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/digital_marketing/emailmarketing.html">Email Marketing</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/websitemarketing.html"><img
+            src="./../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/digital_marketing/websitemarketing.html">Website Marketing</a></div>
     </div>
   </div>
 
@@ -167,11 +170,12 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -180,8 +184,7 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
