--- a/digital_marketing/websitemarketing.html
+++ b/digital_marketing/websitemarketing.html
@@ -113,11 +113,11 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col mb-3 align-self-center">
         <img src="../images/webmarketing.png" alt="Example of webpage presented on a laptop screen placed on a wooden table" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">With website marketing you are leveraging you website as a tool to promote your products or offers. To bring more
+        <p class=" mb-1 bio">With website marketing you are leveraging you website as a tool to promote your products or offers. To bring more
         traffic and potential customers to your website you want to maximise the opportunities potential customers have to find
         you easily and fast. We can help you optimise your website to <a href="./../web_development/seo.html">rank higher on search engines</a> to help you get in front of
         your target audience.
@@ -128,11 +128,11 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li>◼ Google analytics</li>
-          <li>◼ Search engine optimisation (SEO)</li>
-          <li>◼ Website audit for optimisation</li>
-          <li>◼ Web funnel design to boost digital conversion rate</li>
-          <li>◼ A/B testing</li>
+          <li class="bio-list">◼ Google analytics</li>
+          <li class="bio-list">◼ Search engine optimisation (SEO)</li>
+          <li class="bio-list">◼ Website audit for optimisation</li>
+          <li class="bio-list">◼ Web funnel design to boost digital conversion rate</li>
+          <li class="bio-list">◼ A/B testing</li>
         </ul>
 
         </p>
@@ -140,33 +140,37 @@
     </div>
   </div>
 
-  <div class="container creative-services">
-    <div class="row">
-      <div class="col"><a href="/digital_marketing/digitalstrategy.html"><img src="../images/DMicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
-      <div class="col"><a href="/digital_marketing/smmanagement.html"><img src="../images/DMicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"> <a href="/digital_marketing/smmanagement.html">Social Media Management</a></div>
-      <div class="col"><a href="/digital_marketing/emailmarketing.html"><img src="../images/DMicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/digital_marketing/emailmarketing.html">Email Marketing</a></div>
-      <div class="col"><a href="/digital_marketing/websitemarketing.html"><img src="../images/DMicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/digital_marketing/websitemarketing.html">Website Marketing</a></div>
+<div class="container creative-services">
+  <div class="row">
+    <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/digitalstrategy.html"><img
+          src="./../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/digital_marketing/digitalstrategy.html">Digital Marketing
+        Strategy</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/smmanagement.html"><img
+          src="./../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+    <div class="col-lg-2 col-md-2 col-4"> <a href="/digital_marketing/smmanagement.html">Social Media Management</a>
     </div>
+    <div class="w-100 d-md-none"></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/emailmarketing.html"><img
+          src="./../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/digital_marketing/emailmarketing.html">Email Marketing</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/websitemarketing.html"><img
+          src="./../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/digital_marketing/websitemarketing.html">Website Marketing</a></div>
   </div>
+</div>
 
 
 </body>
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -175,8 +179,7 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
