--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </nav>
 <div class="container">
   <div class="row">
-    <div class="col-7 designer">
+    <div class="col-lg-7 col-xs-12 designer align-self-center">
       <h1 class="website-title">A complete marketing solution to everyday digital challenges</h1>
 <p class="bio-highlight web-intro">Is the day to day running of your business get in the way of updating or building your website? You know a well-built
 website with a solid digital marketing strategy would get you more customers. All this is daunting, complex and a lot of
@@ -121,8 +121,9 @@ no disconnect between the contractors managing your digital presence.<br>
 Each business is unique. Understanding your business objectives is the key to build a bespoke action plan that will help
 you reach your goals while you stay free to focus on what you do best.</p>
     </div>
-    <div class="col-5 mt-2 mb-2 align-self-center">
-<img src="images/Key offerings.png" alt="Creafix Mascot and 3 key offering: web development, creative design, digital marketing" class="img-fluid mx-auto d-block img-sample">
+    
+    <div class="col-lg-5 mt-2 mb-2 col-xs-12 align-self-center">
+<div class="d-none d-md-block"><img src="images/Key offerings.png" alt="Creafix Mascot and 3 key offering: web development, creative design, digital marketing" class="img-fluid mx-auto d-block img-sample"></div>
     </div>
     <div class="row mt-2 g-0">
       <div class="col-12  contact-button">
@@ -138,32 +139,34 @@ you reach your goals while you stay free to focus on what you do best.</p>
 <div class="title" > <h1 class="title">What we do</h1></div>
 <div class="container intro-services">
   <div class="row">
-    <div class="col-1"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-2"><a href="/creative_services/logodesign.html">Logo creation</a></div>
-    <div class="col-1"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/logodesign.html">Logo creation</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-2"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
-    <div class="col-1"><a href="/digital_marketing/digitalstrategy.html"><img src="./../images/DMicon.png"
+    <div class="col-lg-2 col-md-2 col-4"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
+    <div class="w-100 d-md-none"></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/digital_marketing/digitalstrategy.html"><img src="./../images/DMicon.png"
           alt="Digital marketing services phone icon" class="service-icon" /></a></div>
-    <div class="col-2"><a href="/digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
-    <div class="col-1"><a href="/web_development/seo.html"><img src="./../images/WebDevicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/seo.html"><img src="./../images/WebDevicon.png"
           alt="Web services screen icon" class="service-icon" /></a></div>
-    <div class="col-2"><a href="/web_development/seo.html">Search Engine Optimisation</a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/seo.html">Search Engine Optimisation</a></div>
   </div>
   <div class="row">
-    <div class="col-1"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png"
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-2"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
-    <div class="col-1"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png"
           alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-2"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
-    <div class="col-1"><a href="/web_development/webdesign.html"><img src="./../images/WebDevicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
+    <div class="w-100 d-md-none"></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/webdesign.html"><img src="./../images/WebDevicon.png"
           alt="Web services screen icon" class="service-icon" /></a></div>
-    <div class="col-2"><a href="/web_development/webdesign.html">Web Design & Development</a></div>
-    <div class="col-1"><a href="/web_development/websiteaudit.html"><img src="./../images/WebDevicon.png"
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/webdesign.html">Web Design & Development</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/websiteaudit.html"><img src="./../images/WebDevicon.png"
           alt="Web services screen icon" class="service-icon" /></a></div>
-    <div class="col-2"><a href="/web_development/websiteaudit.html">Website Performence Audit</a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/websiteaudit.html">Website Performance Audit</a></div>
   </div>
 </div>
 <div class="top-line-title" id="work"></div>
@@ -172,10 +175,10 @@ you reach your goals while you stay free to focus on what you do best.</p>
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-4">
+    <div class="col-lg-4 col-xs-12">
       <img src="./images/Mascot who am I.PNG" alt="Creafix Mascot who am I" class="img-fluid mx-auto d-block mascot">
     </div>
-    <div class="col-7">
+    <div class="col-lg-7 col-xs-12">
       <p class="bio">Creafix Design is a digital freelance agency directed by me, Audrey! I am based in Christchurch, New Zealand and operate
       nationwide. For the last few years, we have worked with businesses around the Canterbury region across a range of
       industries. We work with small and medium businesses make the most of their digital presence to help them thrive. We are
@@ -202,10 +205,10 @@ you reach your goals while you stay free to focus on what you do best.</p>
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-4">
+    <div class="col-lg-4 col-xs-12 ">
       <img src="./images/Mascot work with me.png" alt="Creafix Mascot why work with me?" class="img-fluid mx-auto d-block mascot">
     </div>
-    <div class="col-7">
+    <div class="col-lg-7 col-xs-12">
       <p class="bio">Whether you've been in business for 2 or 20 years, you need visual communication and strategy that will make you reach
       your ideal customers better and drive them to purchase your offering.<br/>
       To keep the process simple, we like to start by reviewing the situation of your business and understand your goals and
@@ -287,11 +290,11 @@ you reach your goals while you stay free to focus on what you do best.</p>
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-4">
+    <div class="col-lg-4 col-xs-12">
 <img src="./images/Mascot lets talk.PNG" alt="Creafix Mascot let's talk" class="img-fluid mx-auto d-block mascot">
 </div>
 
-<div class="col-8">
+<div class="col-lg-8 col-xs-12">
 <form class="row g-3" action="">
   <div class="col-md-6">
     <div class="form-floating mb-1">
@@ -335,9 +338,10 @@ you reach your goals while you stay free to focus on what you do best.</p>
   </div>-->
   <div class="g-recaptcha" data-sitekey="6Lel4Z4UAAAAAOa8LO1Q9mqKRUiMYl_00o5mXJrR">
   </div>
-  <div class="col-12">
-    <button type="submit" name="submit" class="btn btn-primary">Get in touch</button>
+  <div class="col-12 contact-button">
+    <button type="submit" name="submit" class=" contact-link">Send</button>
   </div>
+  
 </form>
 </div>
   </div>
@@ -353,11 +357,12 @@ you reach your goals while you stay free to focus on what you do best.</p>
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -365,8 +370,8 @@ you reach your goals while you stay free to focus on what you do best.</p>
 
   </div>
   <div id="terms">
-    © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a href="./websitetermofuse.html">Website Terms of
-      Use</a>
+    © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
