--- a/thankyou.html
+++ b/thankyou.html
@@ -110,7 +110,7 @@
   </nav>
   <div class="top-line-title" id="about"></div>
   <div class="title">
-    <h1 class="title">Thanks you</h1>
+    <h1 class="title">Thank you for contacting us! </h1>
   </div>
 
 
@@ -118,7 +118,7 @@
 
   <div class="row mt-2 g-0">
     <div class="col-12  contact-button">
-      <a href="index.html#contact" class="contact-link" title="Contact me">Work with me</a>
+      <a href="index.html" class="contact-link" title="Homepage">Back to homepage</a>
     </div>
   </div>
   
@@ -126,11 +126,12 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -139,10 +140,10 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
+
   
   </html>
