--- a/web_development/landingpages.html
+++ b/web_development/landingpages.html
@@ -114,11 +114,11 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col mb-3 align-self-center">
         <img src="../images/Landingpage.PNG" alt="Example of landing page presented on a laptop screen" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Landing pages are common stand-alone pages used in digital marketing. This is where visitors "land" after they click on a link you've shared in an <a href="./../digital_marketing/smmanagement.html" >ad on social media</a> or <a href= "./../digital_marketing/emailmarketing.html">email campaign</a>.
+        <p class=" mb-1 bio">Landing pages are common stand-alone pages used in digital marketing. This is where visitors "land" after they click on a link you've shared in an <a href="./../digital_marketing/smmanagement.html" >ad on social media</a> or <a href= "./../digital_marketing/emailmarketing.html">email campaign</a>.
         This type of webpages typically has a single objective, make the visitor complete your call to action. Focusing on one
         goal makes this landing pages the best tool to increase the conversion rates of your marketing campaigns. We design with you the landing
         pages layouts that suit your marketing objectives.
@@ -129,10 +129,10 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li>◼ Design different landing pages depending on your objective</li>
-          <li>◼ Tailor landing pages to your digital marketing strategy</li>
-          <li>◼ Design the funnel sequence of landing pages to achieve sale conversion</li>
-          <li>◼ Integration of your landing pages with main marketing tools available</li>
+          <li class="bio-list">◼ Design different landing pages depending on your objective</li>
+          <li class="bio-list">◼ Tailor landing pages to your digital marketing strategy</li>
+          <li class="bio-list">◼ Design the funnel sequence of landing pages to achieve sale conversion</li>
+          <li class="bio-list">◼ Integration of your landing pages with main marketing tools available</li>
         </ul>
 
         </p>
@@ -142,31 +142,35 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/webdesign.html">Web design & development</a></div>
-      <div class="col"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/webdesign.html">Web design & development</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
-      <div class="col"><a href="/web_development/landingpages.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
+      <div class="w-100 d-md-none"></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/landingpages.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/landingpages.html">Landing pages</a></div>
-      <div class="col"><a href="/web_development/websiteaudit.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/landingpages.html">Landing pages</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/websiteaudit.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/websiteaudit.html">Website performance audit</a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/websiteaudit.html">Website performance audit</a></div>
     </div>
   </div>
+
+  
 
 
 </body>
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -175,8 +179,7 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
