--- a/web_development/seo.html
+++ b/web_development/seo.html
@@ -114,11 +114,11 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col mb-3 align-self-center">
         <img src="../images/seo.PNG" alt="Phone screen with google search page" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Search Engine optimisation or SEO is the process used to increase and improve the quality of the unpaid traffic coming
+        <p class=" mb-1 bio">Search Engine optimisation or SEO is the process used to increase and improve the quality of the unpaid traffic coming
         to your website. The higher your website ranks on Google for a keyword, the more relevant and abundant the website traffic
         will be, therefore increasing your chances of sales conversion.
         SEO is an ongoing process that requires monitoring and adjusting on a regular basis to keep you ranking as high as
@@ -131,11 +131,11 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li>◼ Webpage design and content optimisation for Google ranking</li>
-          <li>◼ Google analytics monitoring and reporting</li>
-          <li>◼ Keyword selection and implementation</li>
-          <li>◼ SEO strategy</li>
-          <li>◼ SEO audits</li>
+          <li class="bio-list">◼ Webpage design and content optimisation for Google ranking</li>
+          <li class="bio-list">◼ Google analytics monitoring and reporting</li>
+          <li class="bio-list">◼ Keyword selection and implementation</li>
+          <li class="bio-list">◼ SEO strategy</li>
+          <li class="bio-list">◼ SEO audits</li>
         </ul>
 
         </p>
@@ -145,18 +145,20 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/webdesign.html">Web design & development</a></div>
-      <div class="col"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/webdesign.html">Web design & development</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
-      <div class="col"><a href="/web_development/landingpages.html"><img src="../images/WebDevicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/landingpages.html">Landing pages</a></div>
-      <div class="col"><a href="/web_development/websiteaudit.html"><img src="../images/WebDevicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/websiteaudit.html">Website performance audit</a></div>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
+      <div class="w-100 d-md-none"></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/landingpages.html"><img
+            src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/landingpages.html">Landing pages</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/websiteaudit.html"><img
+            src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/websiteaudit.html">Website performance audit</a>
+      </div>
     </div>
   </div>
 
@@ -165,11 +167,12 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -178,8 +181,7 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
