--- a/web_development/webdesign.html
+++ b/web_development/webdesign.html
@@ -113,11 +113,11 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col mb-3 align-self-center">
         <img src="../images/coding.png" alt="laptop screen with lines of codes on dark background" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Not all business websites require the use of complex features or design. Before we start, we carry out an review of where you are
+        <p class=" mb-1 bio">Not all business websites require the use of complex features or design. Before we start, we carry out an review of where you are
         currently and where you're wanted to be in the short to long term to make a recommendation on the most suitable option
         for your situation. We offer services ranging for fully custom coded websites to CMS build websites on Wix, SquareSpace
         or Shopify for example. We take you through the entire process from creating the layout via wireframes to registering
@@ -129,17 +129,17 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li>◼ Custom code</li>
-          <li>◼ WordPress</li>
-          <li>◼ Wix</li>
-          <li>◼ Squarespace</li>
-          <li>◼ Shopify</li>
-          <li>◼ UI/UX design</li>
-          <li>◼ Website architecture</li>
-          <li>◼ Sitemaps</li>
-          <li>◼ Domain name registration</li>
-          <li>◼ Webhosting</li>
-          <li>◼ Web page maintenance and updates</li>
+          <li class="bio-list">◼ Custom code</li>
+          <li class="bio-list">◼ WordPress</li>
+          <li class="bio-list">◼ Wix</li>
+          <li class="bio-list">◼ Squarespace</li>
+          <li class="bio-list">◼ Shopify</li>
+          <li class="bio-list">◼ UI/UX design</li>
+          <li class="bio-list">◼ Website architecture</li>
+          <li class="bio-list">◼ Sitemaps</li>
+          <li class="bio-list">◼ Domain name registration</li>
+          <li class="bio-list">◼ Webhosting</li>
+          <li class="bio-list">◼ Web page maintenance and updates</li>
         </ul>
   
         </p>
@@ -147,33 +147,36 @@
     </div>
   </div>
   
-  <div class="container creative-services">
-    <div class="row">
-      <div class="col"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/webdesign.html">Web design & development</a></div>
-      <div class="col"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
-      <div class="col"><a href="/web_development/landingpages.html"><img src="../images/WebDevicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/landingpages.html">Landing pages</a></div>
-      <div class="col"><a href="/web_development/websiteaudit.html"><img src="../images/WebDevicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/websiteaudit.html">Website performance audit</a></div>
+<div class="container creative-services">
+  <div class="row">
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
+          alt="Creative services pencil icon" class="service-icon" /></a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/webdesign.html">Web design & development</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
+          alt="Creative services pencil icon" class="service-icon" /></a></div>
+    <div class="col-lg-2 col-md-2 col-4"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
+    <div class="w-100 d-md-none"></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/landingpages.html"><img
+          src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/landingpages.html">Landing pages</a></div>
+    <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/websiteaudit.html"><img
+          src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/websiteaudit.html">Website performance audit</a>
     </div>
   </div>
+</div>
   
   
   </body>
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -182,8 +185,7 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
