--- a/web_development/websiteaudit.html
+++ b/web_development/websiteaudit.html
@@ -114,12 +114,12 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col mb-3 align-self-center">
         <img src="../images/webaudit.png" alt="Graph presented on dashboard showing website parameters"
           class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1">Carrying out a performance test on your website allows you to identify the weakest points that might impact the
+        <p class=" mb-1 bio">Carrying out a performance test on your website allows you to identify the weakest points that might impact the
         performance and/or the user experience. This is a great tool to help identify the areas of the website that needs
         optimising to increase your engagement and overall <a href= "./../web_development/seo.html">SEO ranking</a>.
           </br>
@@ -127,9 +127,9 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li>◼ Complete website audit</li>
-          <li>◼ SEO ranking audit</li>
-          <li>◼ Create a plan to correct the areas of weaknesses</li>
+          <li class="bio-list">◼ Complete website audit</li>
+          <li class="bio-list">◼ SEO ranking audit</li>
+          <li class="bio-list">◼ Create a plan to correct the areas of weaknesses</li>
         </ul>
 
         </p>
@@ -139,18 +139,20 @@
 
   <div class="container creative-services">
     <div class="row">
-      <div class="col"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/webdesign.html">Web design & development</a></div>
-      <div class="col"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/webdesign.html">Web design & development</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
-      <div class="col"><a href="/web_development/landingpages.html"><img src="../images/WebDevicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/landingpages.html">Landing pages</a></div>
-      <div class="col"><a href="/web_development/websiteaudit.html"><img src="../images/WebDevicon.png"
-            alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col"><a href="/web_development/websiteaudit.html">Website performance audit</a></div>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
+      <div class="w-100 d-md-none"></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/landingpages.html"><img
+            src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/landingpages.html">Landing pages</a></div>
+      <div class="col-lg-1 col-md-1 col-2"><a href="/web_development/websiteaudit.html"><img
+            src="../images/WebDevicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/web_development/websiteaudit.html">Website performance audit</a>
+      </div>
     </div>
   </div>
 
@@ -159,11 +161,12 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -172,8 +175,7 @@
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
