--- a/websitetermofuse.html
+++ b/websitetermofuse.html
@@ -278,7 +278,7 @@
         <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class=""></div>
       </div>
       <div class="col-md-auto email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
