--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
   <div class="about-box">
     <div class="row mt-2 mb-1 h-100">
       <div class="col-md-5"></div>
-      <div class="col-md-6"> <h2>Audrey Chevillat - Creative Director</h2></div>
+      <div class="col-md-6 mb-4"> <h2>Audrey Chevillat - Creative Director</h2></div>
     </div>
     <div class="row mt-2 mb-1 h-100">
       <div class="col-md-5">
@@ -412,11 +412,12 @@ We design static and dynamic websites depending on requirements.<br/>
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      <div class="col-2 logofooter">
+        <div class="d-none d-md-block"><img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+        </div>
       </div>
-      <div class="col-11 email-footer">
-        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+      <div class="col-md-auto email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email us</a>
         Christchurch, New Zealand
       </div>
     </div>
@@ -425,8 +426,7 @@ We design static and dynamic websites depending on requirements.<br/>
   </div>
   <div id="terms">
     © 2022 by Creafix Design All Rights Reserved. | <a href="./privacypolicy.html">Privacy Policy</a> | <a
-      href="./websitetermofuse.html">Website Terms of
-      Use</a>
+      href="./websitetermofuse.html">Website Terms of Use</a>
   </div>
 
 </footer>
