--- a/thankyou.html
+++ b/thankyou.html
@@ -108,19 +108,29 @@
 
     </ul>
   </nav>
-  <div class="top-line-title" id="about"></div>
-  <div class="title">
-    <h1 class="title">Thank you for contacting us! </h1>
-  </div>
+  
+ 
+ 
+      <div class="">
+        <img src="./images/Mascot thank you.png" alt="Creafix Mascot thank you"
+          class="img-fluid mx-auto d-block mascot">
+      </div>
+<div class="">
+<h1 class="title ty">Thank you for reaching out! </h1>
+<p class="web-intro bio-highlight ty">We are reviewing your request and will get back to you as soon as possible. In the meantime feel free to browse our website and follow us on LinkedIn.</p>
+
+
+<div class="contact-button justify-content-center"><a href="index.html" class="contact-link" title="Homepage">Back to homepage</a></div>
+    
+</div>
+</div>
+  
+  
 
 
 
 
-  <div class="row mt-2 g-0">
-    <div class="col-12  contact-button">
-      <a href="index.html" class="contact-link" title="Homepage">Back to homepage</a>
-    </div>
-  </div>
+  
   
   </body>
 <footer>
